# OOmnik

./: INSTALL  Makefile.am  README  auto_cleanup.sh  auto_init.sh  configure.ac  oomnik.pc.in
data/basic_mindmap/: oomniconf.xml  oomniconf.xml~
data/basic_mindmap/discourse/: statement.xml
data/basic_mindmap/numeric/: digit.xml  generic_number.xml  integer_as_singlebyte.xml  integer_as_utf16.xml  integer_as_utf8.xml  integer_positional_decimal.xml  quant.xml  unicode_digits.xml
src/: Makefile.am  main.c  ooaccumulator.c  ooaccumulator.h  ooagenda.c  ooagenda.h  ooarray.c  ooarray.h  oocache.c  oocache.h  oocode.c  oocode.h  oocodesystem.c  oocodesystem.h  oocomplex.c  oocomplex.h  ooconcept.c  ooconcept.h  ooconcunit.c  ooconcunit.h  ooconfig.h  ooconstraint.c  ooconstraint.h  oodecoder.c  oodecoder.h  oodenotmap.c  oodenotmap.h  oodict.c  oodict.h  oodomain.c  oodomain.h  oolist.c  oolist.h  oomindmap.c  oomindmap.h  oomnik.c  oomnik.h  oosegmentizer.c  oosegmentizer.h  ootopic.c  (+3 more)
